# redeem

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  Makefile  README.md  attribution.html  index.html  objects.inv  redeem_update.py  redeem_version.py  requirements.txt  searchindex.js  setup.cfg  setup.py  test_redeem.py  update-redeem.py  updater.py  versioneer.py
.circleci/: config.yml
.travis/: format-cpp.sh
Device_tree/: BB-BONE-REPLICAP-00A1.dts  BB-BONE-REPLICAP-00A2.dts  BB-BONE-REPLICAP-00A3.dts  BB-BONE-REPLICAP-00A4.dts  Makefile  am335x-bone.dtb  am335x-boneblack.dtb  compileTest.sh
Doc/: TODO.txt  TODO_PCB.txt  changelog.txt  changelog_PCB.txt  setup.txt
PCB/: Replicape.brd  Replicape.sch
PCB_rev0/: Replicape_BOM.xlsx  setup.txt
PCB_rev1/: Replicape.brd  Replicape.sch  Replicape_BOM_rev1.xlsx  changelog_PCB_rev_1.txt
PCB_rev_A2/: .~lock.Replicape_BOM_rev2.xlsx#  Replicape.bom  Replicape.brd  Replicape.pro  Replicape.sch  Replicape_BOM_rev1.xlsx  Replicape_BOM_rev_A2.xls  Replicape_BOM_rev_A2.xlsx  Replicape_Rev_A2_pin-mux.ods  changelog_PCB_rev_A2.txt
PCB_rev_A3/: Replicape.brd  Replicape.sch  Replicape_BOM_rev_A3.xls  Replicape_Rev_A3_pin-mux.ods  changelog_PCB_rev_A3.txt
PCB_rev_A3A/: .~lock.Replicape_BOM_rev_A3A.xls#  Replicape.brd  Replicape.sch  Replicape_BOM_rev_A3A.xls  Replicape_Rev_A3_pin-mux.ods  Replicape_centroid.csv  changelog_PCB_rev_A3A.txt
PCB_rev_A4/: Replicape_A4.brd  Replicape_A4.sch  Replicape_A4_centroid.csv  Replicape_BOM_rev_A4.xls  Replicape_Rev_A4_pin-mux.ods  changelog_PCB_rev_A4.txt
PCB_rev_A4A/: Replicape_A4A.brd  Replicape_A4A.sch  Replicape_BOM_rev_A4A.xls  (+2 more)
redeem/path_planner/: .clang-format  .gitignore  AlarmCallback.h  CMakeLists.txt  Delta.cpp  Delta.h  Logger.cpp  Logger.h  Path.cpp  Path.h  PathOptimizer.cpp  PathOptimizer.h  PathOptimizerInterface.h  PathPlanner.cpp  PathPlanner.h  PathPlannerNative.i  PathPlannerNative_wrap.h  PathPlannerSetup.cpp  PathQueue.cpp  PathQueue.h  Preprocessor.cpp  PruInterface.h  PruTimer.cpp  PruTimer.h  StepperCommand.h  SyncCallback.h  __prussdrv.h  config.h  pruss_intc_mapping.h  prussdrv.c  prussdrv.h  setup.py  vector3.cpp  vector3.h  vectorN.cpp  vectorN.h
redeem/path_planner/test_harness/: MockPruTimer.cpp  PathPlannerMock.i  PruDump.cpp  PruDump.h  setup.py  test.py
redeem/path_planner/tests/: CMakeLists.txt  Makefile  PathOptimizerTests.cpp  PathPlannerTests.cpp  PathQueueTests.cpp  TestUtils.h  main.cpp  test.py
(+784 files in other folders)
